--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 body {
 	margin: 0;
+	min-height: 100vh;
+
+	display: flex;
+	flex-direction: column;
+
+	font-family: sans-serif;
 }
 
 header {
 	padding: 1rem;
+	display: flex;
+	flex-direction: column;
 
 	background-color: azure;
 }
@@ -11,7 +19,7 @@ header {
 .logo {
 	font-size: 2rem;
 	font-weight: 700;
-	font-family: 'Comic Sans MS', sans-serif;
+	font-family: "Comic Sans MS", sans-serif;
 }
 
 header nav ul {
@@ -35,6 +43,22 @@ header nav a {
 	color: white;
 }
 
+main {
+	flex-grow: 1;
+
+	display: grid;
+	grid-template-rows: auto auto;
+}
+
+main > section {
+	grid-row: 1 / 2;
+	grid-column: 1 / 2;
+}
+main > aside {
+	grid-row: 2 / 3;
+	grid-column: 1 / 2;
+}
+
 .species-list {
 	padding: 1rem;
 	display: flex;
@@ -50,10 +74,75 @@ header nav a {
 	padding: 0.5rem;
 }
 
-.flower-species>img {
+.flower-species > img {
 	width: 100%;
 	height: 8rem;
 
 	object-fit: cover;
 	object-position: 50% 50%;
+}
+
+aside {
+	padding: 0.5rem;
+
+	background-color: #d8eec3;
+}
+
+footer {
+	padding: 0.5rem;
+	display: flex;
+	flex-direction: column;
+
+	background-color: #444444;
+
+	color: white;
+	text-align: center;
+}
+
+footer a,
+footer a:visited {
+	color: white;
+}
+
+@media screen and (min-width: 768px) {
+	header {
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	header nav ul {
+		flex-direction: row;
+	}
+
+	.species-list {
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.flower-species {
+		width: 15rem;
+	}
+
+	footer {
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+}
+
+@media screen and (min-width: 1100px) {
+	main {
+		grid-template-columns: auto 25rem;
+		grid-template-rows: auto;
+	}
+
+	main > section {
+		grid-row: 1 / 2;
+		grid-column: 1 / 2;
+	}
+	main > aside {
+		grid-row: 1 / 2;
+		grid-column: 2 / 3;
+	}
 }
